--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "paper-elements": "Polymer/paper-elements#^0.5.1",
     "polymer": "Polymer/polymer#^0.5.4",
     "app-router": "~2.4.1",
+    "i18n-msg": "ebidel/i18n-msg",
     "fe-video-manager": "ssh://git@stash.viso.tv:7999/wil/fe-video-manager.git#master",
     "fe-channel-inspector": "ssh://git@stash.viso.tv:7999/wil/fe-channel-inspector.git#master"
   },
